discussion/kv_engine/173719/173719_rev1_discussion.txt
======================================================================================================================
DESCRIPTION:

wip pass hps to ckptmgr

Change-Id: I947e7b4fa92cd1b1252c732d0307e6d3b5b7dd1f

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Ben Huddleston
Date: 2022-04-14 16:48:41.000000000
Message: 
Uploaded patch set 1.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-04-14 18:29:34.000000000
Message: 
Patch Set 1: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45339/ : FAILURE

Compile error at C:/Jenkins/workspace/kv_engine-windows-master/kv_engine/engines/ep/src/checkpoint_manager.cc(1216): error C2661: "CheckpointManager::addNewCheckpoint": no overloaded function takes 6 arguments ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/45339/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38084/ : FAILURE

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_analyzer-master/kv_engine/engines/ep/src/checkpoint_manager.cc:1216:5:
error: no matching member function for call to "addNewCheckpoint"
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/38084/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16725/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:1216:5: error: no matching member function for call to "addNewCheckpoint" [clang-diagnostic-error]
    addNewCheckpoint(lh,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:133:25: note: candidate function not viable: requires 7 arguments, but 6 were provided
void CheckpointManager::addNewCheckpoint(
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:120:25: note: candidate function not viable: requires single argument "lh", but 6 arguments were provided
void CheckpointManager::addNewCheckpoint(
                        ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:317:79: error: too few arguments to function call, expected 6, have 5 [clang-diagnostic-error]
    this->manager->createSnapshot(1001, 1003, {}, CheckpointType::Memory, 1003);
                                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:477:5: note: "createSnapshot" declared here
    void createSnapshot(uint64_t snapStartSeqno,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:323:79: error: too few arguments to function call, expected 6, have 5 [clang-diagnostic-error]
    this->manager->createSnapshot(1004, 1006, {}, CheckpointType::Memory, 1005);
                                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:477:5: note: "createSnapshot" declared here
    void createSnapshot(uint64_t snapStartSeqno,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:363:79: error: too few arguments to function call, expected 6, have 5 [clang-diagnostic-error]
    this->manager->createSnapshot(1001, 1003, {}, CheckpointType::Memory, 1003);
                                                                              ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:477:5: note: "createSnapshot" declared here
    void createSnapshot(uint64_t snapStartSeqno,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:368:76: error: too few arguments to function call, expected 6, have 5 [clang-diagnostic-error]
    this->manager->createSnapshot(1004, 1006, 0, CheckpointType::Disk, 1006);
                                                                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:477:5: note: "createSnapshot" declared here
    void createSnapshot(uint64_t snapStartSeqno,
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/checkpoint_test.cc:1732:70: error: too few arguments to function call, expected 6, have 5 [clang-diagnostic-error]
    manager->createSnapshot(0, 1000, 1000, CheckpointType::Disk, 1000);
                                                                     ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.h:477:5: note: "createSnapshot" declared here
    void createSnapshot(uint64_t snapStartSeqno,
    ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16725/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/checkpoint_manager.cc:1216:5:
error: no matching member function for call to "addNewCheckpoint" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/16725/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18502/ : FAILURE

Compile error at [2022-04-14T18:28:04.528Z] /home/couchbase/jenkins/workspace/kv_engine.linux-CE_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1009:46:
error: no matching function for call to ?CheckpointManager::createSnapshot(std::__atomic_base<long unsigned int>::__int_type, std::__atomic_base<long unsigned int>::__int_type, std::optional<long unsigned int>&, CheckpointType&, long unsigned int&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/18502/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19540/ : FAILURE

Compile error at [2022-04-14T18:28:14.228Z] /home/couchbase/jenkins/workspace/kv_engine.threadsanitizer_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1009:46:
error: too few arguments to function call, expected 6, have 5
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/19540/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18838/ : FAILURE

Compile error at [2022-04-14T18:27:52.674Z] /home/couchbase/jenkins/workspace/kv_engine.linux_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1009:46:
error: no matching function for call to ?CheckpointManager::createSnapshot(std::__atomic_base<long unsigned int>::__int_type, std::__atomic_base<long unsigned int>::__int_type, std::optional<long unsigned int>&, CheckpointType&, long unsigned int&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/18838/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/26906/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6439/ : FAILURE

Compile error at [2022-04-14T18:26:06.778Z] /home/couchbase/jenkins/workspace/kv_engine.aarch64-linux_master@3/kv_engine/engines/ep/src/dcp/passive_stream.cc:1009:46:
error: no matching function for call to ?CheckpointManager::createSnapshot(std::__atomic_base<long unsigned int>::__int_type, std::__atomic_base<long unsigned int>::__int_type, std::optional<long unsigned int>&, CheckpointType&, long unsigned int&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/6439/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6377/ : FAILURE

Compile error at [2022-04-14T18:23:42.009Z] /home/couchbase/jenkins/workspace/kv_engine.libFuzzer_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1009:46:
error: too few arguments to function call, expected 6, have 5
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/6377/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17597/ : FAILURE

Compile error at [2022-04-14T17:39:14.801Z] /Users/couchbase/workspace/workspace/kv_engine.macos_master/kv_engine/engines/ep/src/dcp/passive_stream.cc:1009:46:
error: too few arguments to function call, expected 6, have 5
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/17597/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/15653/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
